--- a/Codes_R_kernel.ipynb
+++ b/Codes_R_kernel.ipynb
@@ -1,30 +1,6 @@
 {
  "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"Description\"></a>\n",
-    "### Project Overview:\n",
-    "\n",
-    "In this project, I developed a **multiple linear regression model** to predict the sale price of houses in Vancouver.\n",
-    "\n",
-    "### Methods:\n",
-    "\n",
-    "- The project began by dividing the dataset into two distinct sets: a training set and a validation set. The training set was used to develop the predictive model.\n",
-    "- The project involved conducting **exploratory data analysis**, including visualizations that showcased the relationships between the variables.\n",
-    "- The main part of the project presented the results of the **best model**, referred to as the final model.\n",
-    "- The final model was selected based on several considerations, such as ensuring that assumptions were met, assessing goodness of fit to the training set, evaluating the model's complexity and variable selection, and examining its performance in predicting new data.\n",
-    "- Before arriving at the final model, the project also considered alternative **candidate models**.\n",
-    "\n",
-    "### Final Remarks:\n",
-    "\n",
-    "- The project concluded with a discussion of the strengths and limitations of the final model. Recommendations were provided to address any identified limitations.\n",
-    "- The predictive model aimed to provide valuable insights for real estate professionals in Vancouver, enabling them to make informed decisions while representing both sellers and buyers of houses.\n",
-    "\n",
-    "---"
-   ]
-  },
+  
   {
    "cell_type": "markdown",
    "metadata": {},
@@ -128,7 +104,7 @@
    "source": [
     "---\n",
     "<a id=\"EDA\"></a>\n",
-    "# Part A - Exploratory data analysis (4 marks)\n"
+    "# Exploratory data analysis\n"
    ]
   },
   {
@@ -2411,33 +2387,14 @@
     "| Model C | 446768.036519619 | 365479.205848506 | Price ~ Total.floor.area + Lot.Size + Age.sqrt |"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "<a id=\"Discussion\"></a>\n",
-    "# Discussion (400 words max.) (6 marks)\n",
-    "\n",
-    "Certainly, here's the revised text with \"I\" instead of \"we,\" and important places highlighted:\n",
-    "\n",
-    "My model can provide the buyer and the seller with **predicted housing prices** to help them make the optimal decision when trading house properties in Vancouver. From the seller’s perspective, they can easily calculate the variables (i.e. Total Floor Area, Lot Size, and Age) of their properties and set their houses at relatively reasonable prices with a statistical method. From the buyer’s side, they can have a handy tool when negotiating with the property agents and making their buying decision. Both the buyer and the seller can benefit from the prediction model.\n",
-    "\n",
-    "The **strengths** of the model are interpretability and practicality. The model can be easily explained by its coefficients. The coefficients can be interpreted as how much an explanatory variable can affect the response variable. For example, the coefficient of the Total Floor Area is 32,086 means the price will increase by $32,086 if the square root of the Total Floor Area increases by 1. The absolute value of the coefficients can be also used to compare the influence level between variables. As for practicality, users can easily collect the explanatory data by calculating by themselves or by searching on the internet, **saving lots of time and money** on collecting data. Users do not need to be concerned about the scale of their calculation will be varied a lot from the data because all the collected data are objective.\n",
-    "\n",
-    "However, there are some limitations of the prediction model. The prediction model cannot completely satisfy the assumption of independence in terms of time and space. For example, the prediction model may not be used to predict the housing price after the pandemic because the data was collected before COVID-19. Also, the model cannot distinguish the different neighborhoods in Vancouver city. With similar age, lot size, and total floor area, houses in Dunbar can reach $3,000K while houses in east Vancouver can be $700K. When using the model, users still need to be aware of the time and space limitations to prevent them from making wrong decisions.\n",
-    "\n",
-    "My **recommendation** to address the limitation is to improve the data collection and processing. When collecting data, I will suggest including more location data, such as neighborhoods, to achieve better prediction results. As for the data processing, I will suggest processing the address variable in the given data into longitude and latitude, solving the location problem with quantitative data.\n",
-    "\n"
-   ]
-  },
+  
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
     "<a id=\"Transformations\"></a>\n",
-    "# Visualizing appropriate transformations (1 mark)\n"
+    "# Visualizing appropriate transformations\n"
    ]
   },
   {
@@ -2491,7 +2448,7 @@
    "source": [
     "---\n",
     "<a id=\"Other_models\"></a>\n",
-    "# Other candidate models (3 marks)"
+    "# Other candidate models"
    ]
   },
   {
